--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "next-lowdb",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+	"name": "next-lowdb",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "npx env-cmd -x next dev -p '$PORT'",
+		"start": "npx env-cmd -x next start -p '$PORT'",
+		"build": "next build",
+		"lint": "next lint",
+		"prettier-all": "npx prettier --config .prettierrc --write ./src",
+		"fix": "npx eslint --fix ./src --ext .js --ext .jsx",
+		"dependencies-upgrade": "yarn yarn-upgrade-all"
+	},
+	"dependencies": {
+		"@ant-design/icons": "^5.2.6",
+		"antd": "^5.12.8",
+		"lowdb": "^7.0.1",
+		"next": "13.5.6",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@ant-design/cssinjs": "^1.18.2",
+		"@types/react": "18.2.47",
+		"env-cmd": "^10.1.0",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-unicorn": "^50.0.1",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"prettier": "^3.1.1",
+		"yarn-upgrade-all": "^0.7.2"
+	},
+	"yarn-upgrade-all": {
+		"ignore": [
+			"react",
+			"next",
+			"react-dom"
+		]
+	}
 }
