--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ant-design/icons": "^5.2.6",
 		"antd": "^5.12.8",
+		"lodash": "^4.17.21",
 		"lowdb": "^7.0.1",
 		"next": "13.5.6",
 		"react": "^18",
